--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "ag-psd": "^14.5.3",
     "next": "^12.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
