--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "ag-psd": "^14.5.3",
     "file-saver": "^2.0.5",
+    "monolite": "^0.9.2",
     "next": "^12.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
