--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
     "eslint-plugin-react": "^7.30.1",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
-  }
+  },
+  "packageManager": "yarn@3.2.4"
 }
