--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -217,6 +217,12 @@
     "yield-star-spacing": "error",
     "yoda": "error",
     "react/react-in-jsx-scope": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/no-unknown-property": [
+      2,
+      {
+        "ignore": ["jsx"]
+      }
+    ]
   }
 }
