--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "export": "next export"
   },
   "dependencies": {
-    "ag-psd": "^14.5.3",
+    "ag-psd": "^20.0.0",
     "file-saver": "^2.0.5",
     "monolite": "^0.9.2",
-    "next": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.2.4",
@@ -30,12 +30,12 @@
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
-    "eslint-config-next": "^12.2.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4"
+    "eslint-config-next": "^14.2.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.5"
   },
-  "packageManager": "yarn@3.2.4"
+  "packageManager": "bun@1.1.6"
 }
