--- a/package.json
+++ b/package.json
@@ -15,27 +15,27 @@
     "export": "next export"
   },
   "dependencies": {
-    "ag-psd": "^28.0.0",
+    "ag-psd": "^29.0.0",
     "file-saver": "^2.0.5",
     "monolite": "^0.9.2",
-    "next": "^16.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^16.0.0",
-    "@types/file-saver": "^2.0.5",
-    "@types/node": "^24.0.0",
-    "@types/react": "^19.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "^16.0.0",
-    "eslint-config-prettier": "^10.0.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
-    "prettier": "^3.2.5",
-    "typescript": "^5.4.5"
+    "@next/eslint-plugin-next": "^16.0.7",
+    "@types/file-saver": "^2.0.7",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@typescript-eslint/eslint-plugin": "^8.48.1",
+    "@typescript-eslint/parser": "^8.48.1",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.7",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "prettier": "^3.7.4",
+    "typescript": "^5.9.3"
   },
-  "packageManager": "bun@1.1.6"
+  "packageManager": "pnpm@10.24.0+sha512.01ff8ae71b4419903b65c60fb2dc9d34cf8bb6e06d03bde112ef38f7a34d6904c424ba66bea5cdcf12890230bf39f9580473140ed9c946fef328b6e5238a345a"
 }
